--- a/README.Rmd
+++ b/README.Rmd
@@ -2,3 +2,5 @@
 output: github_document
 ---
 Training repositories to learn how to create packages. Ignore the rest of this document it's a default R Markdown document. Currently, there's nothing interesting here.
+
+Here conflict!
