--- a/README.Rmd
+++ b/README.Rmd
@@ -4,7 +4,7 @@ output: github_document
 Training repositories to learn how to create packages. Ignore the rest of this document it's a default R Markdown document. Currently, there's nothing interesting here.
 
 
-Here conflict!
-
+Here conflict! \\
+PEACE TREATY \\
 There's indeed nothing interesting here. 
 
