--- a/README.Rmd
+++ b/README.Rmd
@@ -9,3 +9,7 @@ PEACE TREATY \\
 There's indeed nothing interesting here. 
 
 MY CHANGES ON YOUR PACKAGE
+
+ <!-- badges: start -->
+  [![R-CMD-check](https://github.com/lomidzebeka/project/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/lomidzebeka/project/actions/workflows/R-CMD-check.yaml)
+  <!-- badges: end -->
