--- a/README.Rmd
+++ b/README.Rmd
@@ -3,12 +3,7 @@ output: github_document
 ---
 Training repositories to learn how to create packages. Ignore the rest of this document it's a default R Markdown document. Currently, there's nothing interesting here.
 
-
-Here conflict! \\
-PEACE TREATY \\
-There's indeed nothing interesting here. 
-
-MY CHANGES ON YOUR PACKAGE
+"Near by this city was a pyramid of stone, a plethrum in breadth and two plethra in height"
 
  <!-- badges: start -->
   [![R-CMD-check](https://github.com/lomidzebeka/project/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/lomidzebeka/project/actions/workflows/R-CMD-check.yaml)
