Adding badges and changes to README

--- a/README.Rmd
+++ b/README.Rmd
@@ -8,3 +8,8 @@ Training repositories to learn how to create packages. Ignore the rest of this d
  <!-- badges: start -->
   [![R-CMD-check](https://github.com/lomidzebeka/project/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/lomidzebeka/project/actions/workflows/R-CMD-check.yaml)
   <!-- badges: end -->
+  
+
+
+  [![Codecov test coverage](https://codecov.io/gh/lomidzebeka/project/branch/master/graph/badge.svg)](https://app.codecov.io/gh/lomidzebeka/project?branch=master)
+
