--- a/README.Rmd
+++ b/README.Rmd
@@ -5,11 +5,13 @@ Training repositories to learn how to create packages. Ignore the rest of this d
 
 "Near by this city was a pyramid of stone, a plethrum in breadth and two plethra in height"
 
+
+
  <!-- badges: start -->
   [![R-CMD-check](https://github.com/lomidzebeka/project/actions/workflows/R-CMD-check.yaml/badge.svg)](https://github.com/lomidzebeka/project/actions/workflows/R-CMD-check.yaml)
   <!-- badges: end -->
   
 
-
+ <!-- badges: start -->
   [![Codecov test coverage](https://codecov.io/gh/lomidzebeka/project/branch/master/graph/badge.svg)](https://app.codecov.io/gh/lomidzebeka/project?branch=master)
-
+  <!-- badges: end -->
